--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Helper element for visually attaching content to another element.",
   "main": "szn-tethered.es6.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "./node_modules/.bin/gulp",
+    "prepublishOnly": "echo Run \\'npm run publish-package\\' instead && exit 1",
+    "publish-package": "npm run build && npm publish --ignore-scripts dist"
   },
   "repository": {
     "type": "git",
@@ -29,8 +32,14 @@
     "@jurca/szn-elements": "0.0.1"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-minify": "^0.2.0",
+    "del": "^3.0.0",
     "eslint": "^4.11.0",
     "eslint-config-fbjs-opensource": "^1.0.0",
+    "gulp": "gulpjs/gulp#4.0",
+    "gulp-babel": "^7.0.0",
+    "gulp-rename": "^1.2.2",
     "jest": "^21.2.1"
   }
 }
