fixed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "szn-tethered",
+  "name": "@jurca/szn-tethered",
   "version": "0.0.0",
   "description": "Helper element for visually attaching content to another element.",
   "main": "szn-tethered.es6.js",
