--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jurca/szn-tethered.git"
+    "url": "git+https://github.com/seznam/szn-tethered.git"
   },
   "keywords": [
     "custom",
@@ -25,9 +25,9 @@
   "author": "Martin Jurča <martin.jurca@firma.seznam.cz>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jurca/szn-tethered/issues"
+    "url": "https://github.com/seznam/szn-tethered/issues"
   },
-  "homepage": "https://github.com/jurca/szn-tethered#readme",
+  "homepage": "https://github.com/seznam/szn-tethered#readme",
   "peerDependencies": {
     "@jurca/szn-elements": "^1.0.1"
   },
