--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-minify": "^0.2.0",
     "del": "^3.0.0",
-    "eslint": "^4.11.0",
+    "eslint": "^5.16.0",
     "eslint-config-fbjs-opensource": "^1.0.0",
-    "gulp": "gulpjs/gulp#4.0",
+    "gulp": "^4.0.2",
     "gulp-babel": "^7.0.0",
     "gulp-rename": "^1.2.2",
-    "jest": "^21.2.1"
+    "jest": "^24.8.0"
   }
 }
